--- a/appsettings.json
+++ b/appsettings.json
@@ -6,5 +6,19 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AzureAd": {
+    "Instance": "https://login.microsoftonline.com/",
+    "Domain": "spider12345hotmail.onmicrosoft.com",
+    "TenantId": "bf53dfc7-9d1d-45de-8b9c-166bf3ef3a81",
+    "ClientId": "13ebfc66-7864-4126-a27e-a82fbf67c6ff",
+    "CallbackUrl": "./signin-oidc",
+    "SignoutcallbackUrl": "./signout-oidc",
+    "Scopes": "user.read",
+    "ClientSecret": "Client secret from app-registration. Check user secrets/azure portal.",
+    "ClientCertificates": []
+  },
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "azsamplewebapp1ContextConnection": "Server=(localdb)\\mssqllocaldb;Database=azsamplewebapp1;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
